[P]hase [H]armonic [A]dvanced [S]ynthesis [EX]permient

Changelog:
2015-03-01 William <william.h.weston@gmail.com> - 0.14.97-dev
	* Updated email address.
	* Included Fons Adriaensen's DC filter patch.
	* Fixed memory clobbering bug in sample resampling code.
	* Applied Ralf's DC offset fix for sample normalization.
	* Fixed improper install of autoconf scripts.
	* Removed -fsingle-precision-constant from OPT_CFLAGS.
	* Created macros for wavetable lookup funtions.
	* Added conditional compilaton for splash screen.
	* Fixed portamento overshoot bug.
	* Increased internal tuning resolution to 1440.
	* Fixed gtkknob compilation warnings.

2013-01-11 William Weston <william.h.weston@gmail.com> - 0.14.97
	* Cleaned up pointer sign warning in queue_midi_event().
	* Included (/usr)/bin/true configure.ac fix from Jörn Nettingsmeier.
	* Included falktx's build patch for src/Makefile.am.
	* Added synth-part to MIDI channel assignments to midimaps.
	* Removed unused type_id from struct jack_port_info.
	* Added proper detection and conditions for new JACK features.
	* Reworked BPM handling and removed duplicated code.
	* Fixed typo in pixmaps/Makefile.am.  (Adam Sampson)
	* Implemented note-off instant release from attack and decay.
	* Implemented round-robin voice assignment for mono-multikey.
	* Fixed bug with assigning MIDI CC in GUI.
	* Changed MIDI CC mapping event (now ctrl-middle-click).
	* Changed depracated AM_CONFIG_HEADER to AC_CONFIG_HEADERS.
	* Fixed FTBFS on systems w/o CLOCK_MONOTONIC_RAW.  (Adrian Knoth)
	* Fixed crash and clock sync issues with changing jack buffer size.
	* Consolidated gtkknob frame offset calculations.
	* Added checks to prevent errors on JACK client close.
	* Fixed usage of JACK stereo/multi menuitems for monotimbral builds.
	* Fixed potential LASH client name bug when using ALSA MIDI.
	* Added JACK latency recalculation when changing buffer_latency.
	* Added git version tag tracking to build system.